# LineageForge

./: .dockerignore  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.worker  MVP_COMPLETE.md  Procfile  README.md  ROADMAP_V1.1.md  alembic.ini  docker-compose.yml  pyproject.toml  railway-worker.toml  requirements.txt  start.sh
alembic/: env.py
alembic/versions/: 001_add_indexes.py
app/: __init__.py  config.py  database.py  main.py  models.py  ontology.py
app/api/: __init__.py  graph.py  import_routes.py  jobs.py  persons.py  search.py
app/ingestion/: gedcom_importer.py  wikitree_connector.py
app/reporting/: report_generator.py
app/resolution/: __init__.py  identity_resolver.py
app/static/css/: style.css
app/templates/: base.html  dashboard.html  person.html  runs.html  tree.html
app/templates/reports/: summary.html
app/ui/: __init__.py  views.py
app/validation/: validator.py
app/worker/: __init__.py  tasks.py  worker.py
tests/: __init__.py  conftest.py  test_api.py  test_identity_resolution.py  test_validation.py
